Removed all the maps and replaced with real request bodies